# queryer

./: Cargo.toml  README.md  cliff.toml  deny.toml
queryer-py/: Cargo.toml
queryer-py/src/: lib.rs
queryer/examples/: covid.rs  dialect.rs
queryer/src/: dialect.rs  fetcher.rs  lib.rs  loader.rs
src/: convert.rs
